# davtools

./: .gitignore  README.md  a.out  server.py  test  test.cpp  test.json  test_b64  test_b64.cpp  test_b64_decode  test_b64_decode.cpp  virtual_router.py
.Jules/: alchemist.md
.github/workflows/: build-release.yml
c++/: CMakeLists.txt
c++/src/: app.hpp  converters.cpp  main.cpp  server.cpp
c++/src/converters/: base64.cpp  base64_encode.cpp  common.cpp  common.hpp  img_gif.cpp  invert.cpp  json_min.cpp  json_minify.cpp  md5.cpp  minify_json.cpp  mp4_gif.cpp  pdf_png.cpp  png_jpg.cpp  registry.cpp  registry.hpp  sha256.cpp  virustest.cpp
src/: main.cpp  server.cpp
src/converters/: invert.cpp  pdf_png.cpp  png_jpg.cpp  registry.cpp
tests/: run_tests.sh  test.json  test.min.json
